--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <nav>
                     <a href="http://www.instagram.com/wajik45/" class="logo" target="_blank">wajik45</a>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">About</a></li>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#about">About</a></li>
                         <li><a href="">Projects</a></li>
                         <li><a href="">Contact</a></li>
                     </ul>
@@ -48,7 +48,7 @@
         <!-- Akhir Navbar -->
 
         <!-- Jumbotron -->
-        <section id="jumbotron">
+        <section id="home">
             <div class="container">
                 <div class="jumbo">
                     <div class="kotak-satu">
